[gd_scene load_steps=2 format=3 uid="uid://3mt67xkobf5v"]

[ext_resource type="Script" path="res://Scripts/Components/lobby_info.gd" id="1_pngu3"]

[node name="LobbyInfo" type="VBoxContainer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pngu3")

[node name="JoinCodeHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Join Code"
horizontal_alignment = 1

[node name="JoinCode" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
horizontal_alignment = 1

[node name="PlayerHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Players (X/Y)"
horizontal_alignment = 1

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1
